# fish-coding-agent

./: .gitignore  Cargo.toml  README.md  agents.md  config.example.json
.codegraph/: daemon.pid
.github/workflows/: nightly.yml  stable.yml
src/: app.rs  commands.rs  event.rs  fuzzy.rs  lib.rs  main.rs  mcp.rs  model_data.rs  permission.rs  skill.rs  theme.rs  tools.rs
src/commands/: chat.rs  mod.rs  tests.rs  utils.rs
src/compaction/: mod.rs
src/config/: mod.rs  paths.rs
src/event/: mcp.rs  mod.rs  paste.rs  pickers.rs  tests.rs
src/function/: mod.rs  notifications.rs  states.rs  tests.rs
src/input/: mod.rs  status.rs
src/mcp/: auth.rs  catalog.rs  client.rs  config.rs  mod.rs  oauth_callback.rs  registry.rs  service.rs  status.rs  tests.rs
src/net/: mod.rs  sse.rs  stream.rs
src/providers/: anthropic.rs  common.rs  cursor.rs  mod.rs  openai.rs  volcengine.rs
src/providers/cursor/: auth.rs  exec.rs  mod.rs  proto.rs
src/session/: lru.rs  markdown.rs  markdown_debug_test.txt  mod.rs  render.rs  store.rs
src/session/render/: blocks.rs  mod.rs  tests.rs  utils.rs
src/tools/: exec.rs  file.rs  mod.rs  specs.rs  tests.rs  web.rs
src/ui/: backend.rs  border_type.rs  function_panel.rs  mod.rs  picker_widget.rs  tab_widget.rs  trait_impls.rs
