[package]
name = "fish-coding-agent"
version = "0.1.0"
edition = "2021"
description = "An AI CLI agent with TUI"
license = "MIT"

[[bin]]
name = "fish-coding-agent"
path = "src/main.rs"

[lib]
name = "fish_coding_agent"
path = "src/lib.rs"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "http2", "gzip", "brotli", "deflate", "zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eventsource-stream = "0.2"
futures-util = "0.3"
async-trait = "0.1"
unicode-width = "0.2"
arboard = "3"
pulldown-cmark = "0.13"
syntect = "5"
strip-ansi-escapes = "0.2"
regex = "1"
prost = "0.14.4"
sha2 = "0.11.0"
base64 = "0.22.1"
hex = "0.4"
uuid = { version = "1.23.3", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
